--- a/reglamento.html
+++ b/reglamento.html
@@ -99,7 +99,7 @@
 
                 <h6>Premios</h6>
                 
-                <p>Se entregarán trofeos a la pareja campeona, subcampeona y tercera del torneo.</p>
+                <p>Se entregarán trofeos a la pareja campeona, subcampeona y medallas a la pareja tercera del torneo.</p>
                 <p>Este torneo es un torneo organizado exclusivamente por Alvear Club Tenis de Mesa, por lo cual no suma ni resta puntos en el ranking de cada jugador participante.</p>
                 
                 <h6>Aranceles</h6>
