--- a/reglamento.html
+++ b/reglamento.html
@@ -116,7 +116,7 @@
     <!-- Inscribirme  -->
 
     <div class="container inscripcion text-center">
-        <a href="">
+        <a href="https://api.whatsapp.com/send?phone=541173688676">
             <div class="inscribirme">
                 <p>Inscribirme</p>
             </div>
