--- a/reglamento.html
+++ b/reglamento.html
@@ -103,7 +103,7 @@
                 <p>Este torneo es un torneo organizado exclusivamente por Alvear Club Tenis de Mesa, por lo cual no suma ni resta puntos en el ranking de cada jugador participante.</p>
                 
                 <h6>Aranceles</h6>
-                <p>El costo por categoria será de $700 pesos por jugador($1400 por pareja).</p>
+                <p>El costo por categoria será de $--- pesos por jugador($---- por pareja).</p>
                 <p>Ese arancel deberá ser abonado de manera obligatoria mediante transferencia o efectivo en Alvear Club con fecha limite el viernes 18 de febrero.</p>
                 <p>Quien no cumplan con este requisito perderá su prioridad y se cancelará su inscripción.</p>
 
