--- a/inscritos.html
+++ b/inscritos.html
@@ -34,6 +34,7 @@ function read_value() {
 $("#re").css("visibility","hidden");
 
    document.getElementById("loader").style.visibility = "visible";
+   
  var url = script_url+"?action=read";
 
 $.getJSON(url, function (json) {
@@ -288,6 +289,7 @@ $.getJSON(url, function (json) {
 
 		document.getElementById("loader").style.visibility = "hidden";
     document.getElementById("loader").style.display = "none";
+
 		$("#re").css("visibility","visible");
     });
 	}
@@ -322,7 +324,8 @@ $.getJSON(url, function (json) {
       </div>
 
       <div id="loader" align="center">
-          <lord-icon src="https://cdn.lordicon.com/xjovhxra.json" trigger="loop" colors="primary:#ffffff,secondary:#1e212a" style="width:175px;height:175px"></lord-icon>
+        <img src="images/loading.gif" alt="" style="height: 90px; width: 90px;">
+        <p style="color: white;">Cargando..</p>
       </div>
 
     </div>
