--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <a href="inscritos.html" style="text-decoration: none;">
             <div class="vuton inscritos">
                 <div class="textoBoton">
-                    <p>Inscritos</p>
+                    <p>Inscriptos</p>
                     <small>Consulta el listado de inscriptos del torneo que se actualiza en tiempo real</small>
                 </div>
                 <img id="imagenTarjeta" src="images/ListSVG.png" alt="">
