--- a/inscritos.html
+++ b/inscritos.html
@@ -308,7 +308,7 @@ $.getJSON(url, function (json) {
             </div>
             <div class="column-1 text-center">
                 <h2>1° Torneo de Parejas Alvear Nittaku</h2>
-                <h3>Listado de Inscritos</h3>
+                <h3>Listado de Inscriptos</h3>
             </div>
       </div>
     </div>
