--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                 <img src="images/Alvear Club TDM.png">
             </div>
             <div class="column-1 text-center">
-                <h2>1° Torneo de Parejas Alvear Nittaku</h2>
-                <h3>Domingo 20 de febrero</h3>
+                <h2>2° Torneo de Parejas Alvear Nittaku</h2>
+                <h3>Domingo 10 de abril</h3>
             </div>
       </div>
     </div>
