--- a/reglamento.html
+++ b/reglamento.html
@@ -26,8 +26,8 @@
             <div id="encabezado" class="text-center">
                 <h1>Reglamento y Convocatoria</h1>
                 <h4>1° Torneo de Parejas Alvear Nittaku</h4>
-                <h5>Categoria: 4ta TMT</h5>
-                <h5>Dia: domingo 20 de febrero</h5>
+                <h5>Categoria: 1ra TMT</h5>
+                <h5>Dia: domingo 10 de abril</h5>
                 <h5>Sede: Estadio José Luis Francese, José Enrique Rodo 4190, CABA</h5>
             </div>
             <div id="textoEncabezado" class="container">
@@ -45,15 +45,16 @@
                         <li>Se permite solo un cupo maximo de 24 parejas para este torneo.</li>
                         <li>Las parejas se podrán conformar con jugadores de una misma institución o combinándose dos jugadores de distintas instituciones.</li>
                         <li>Se tomará el ranking TMT para clasificar las categorias y puntajes de cada jugador.</li>
-                        <li>Se tomará el ranking TMT publicado al día del jueves 17 de febrero.</li>
-                        <li>Solo podran participar jugadores que sean de la categoria 4ta TMT o de categorias inferiores</li>
-                        <li>Podrán participar jugadores de la categoría ofrecida y/o de cualquier otra categoría inferior (modalidad abierta).</li>
-                        <li>La suma de los ratings de ambos jugadores no podra superar los 1300 puntos</li>
+                        <li>Se tomará el ranking TMT publicado al día del domingo 27 de marzo.</li>
+                        <li>Solo podran participar jugadores que sean de la categoria 1ra TMT o de categorias inferiores.</li>
+                        <li>Los participantes de la categoria 1ra TMT solo podran participar con una pareja de categoria 3ra TMT(inclusive) o inferior.</li>
+                        <li>Los participantes de la categoria 1ra TMT no podrán participar con un jugador de la categoria 2da TMT.</li>
+                        <li>Los jugadores de categorias inferiores a 1ra que deseen participar pueden hacerlo con un jugador de cualquier otra categoria excepto 1ra TMT.(Por ejemplo: dos jugadores de 2da TMT, uno de 2da TMT con uno de 3ra TMT, etc).</li>
                         <li>El torneo comienza y termina en el día.</li>
-                        <li>La fecha limite para inscribirse es el viernes 18 de febrero.</li>
+                        <li>La fecha limite para inscribirse es el viernes 8 de abril.</li>
                         <li>No se aceptarán inscripciones presenciales, el único medio para inscribirse es a traves del numero 11-7368-8676.</li>
                         <li>Los jugadores podrán consultar el listado de inscritos en todo momento, el cual se actualiza en tiempo real.</li>
-                        <li>El sembrado de zonas se revelará el viernes 18 de febrero a las 21:00hs o cuando se complete el cupo.</li>
+                        <li>El sembrado de zonas se revelará el viernes 8 de abril a las 21:00hs o cuando se complete el cupo.</li>
                         <li>Los jugadores podran consultar el estado de los grupos y llave final mediante la pagina bit.ly/TorneoAlvear</li>
                         <li>Durante la fase de grupos y 16vos las parejas que no esten disputando los encuentros deberán oficiar de "contador de tantos" en dichos encuentros</li>
                     </ul>
@@ -103,7 +104,7 @@
                 <p>Este torneo es un torneo organizado exclusivamente por Alvear Club Tenis de Mesa, por lo cual no suma ni resta puntos en el ranking de cada jugador participante.</p>
                 
                 <h6>Aranceles</h6>
-                <p>El costo por categoria será de $700 pesos por jugador($1400 por pareja).</p>
+                <p>El costo por categoria será de $750 pesos por jugador($1500 por pareja).</p>
                 <p>Ese arancel deberá ser abonado de manera obligatoria mediante transferencia o efectivo en Alvear Club con fecha limite el viernes 18 de febrero.</p>
                 <p>Quien no cumplan con este requisito perderá su prioridad y se cancelará su inscripción.</p>
 
