--- a/llave.html
+++ b/llave.html
@@ -543,17 +543,7 @@ for(var i = 1; i < json.records.length; i++){
    <!-- Zonas  -->
    <div>
 
-    <p id="re"></p>
-
-    <input id="b1" type="button" onclick="read_value()"class="btn" style="height: 8vh; width: 1vh; font-size: 3vh; margin-bottom: 3vh; display: none; border:1px solid white; color:white;" value="Ver Listado" />
-    
-    <div id="showData">
-    </div>
-
-    <div id="loader" align="center">
-      <img src="images/loading.gif" alt="" style="height: 90px; width: 90px;">
-      <p style="color: white;">Cargando..</p>
-    </div>
+    <h4> Proximamente Zonas del Torneo </h4>
 
   </div>
 
