--- a/zonas.html
+++ b/zonas.html
@@ -160,19 +160,9 @@ $.getJSON(url, function (json) {
     </div>
 
    <!-- Zonas  -->
-   <div>
+   <div align="center">
 
-    <p id="re"></p>
-
-    <input id="b1" type="button" onclick="read_value()"class="btn" style="height: 8vh; width: 1vh; font-size: 3vh; margin-bottom: 3vh; display: none; border:1px solid white; color:white;" value="Ver Listado" />
-    
-    <div id="showData">
-    </div>
-
-    <div id="loader" align="center">
-      <img src="images/loading.gif" alt="" style="height: 90px; width: 90px;">
-      <p style="color: white;">Cargando..</p>
-    </div>
+     <h4> Proximamente Zonas del Torneo </h4>
 
   </div>
 
