--- a/llave.html
+++ b/llave.html
@@ -541,9 +541,9 @@ for(var i = 1; i < json.records.length; i++){
     </div>
 
    <!-- Zonas  -->
-   <div>
+   <div align="center">
 
-    <h4> Proximamente Zonas del Torneo </h4>
+    <h4> Proximamente Llaves del Torneo </h4>
 
   </div>
 
