--- a/reglamento.html
+++ b/reglamento.html
@@ -105,9 +105,8 @@
                 
                 <h6>Aranceles</h6>
                 <p>El costo por categoria será de $750 pesos por jugador($1500 por pareja).</p>
-                <p>Ese arancel deberá ser abonado de manera obligatoria mediante transferencia o efectivo en Alvear Club con fecha limite el viernes 18 de febrero.</p>
-                <p>Quien no cumplan con este requisito perderá su prioridad y se cancelará su inscripción.</p>
-
+                <p>El mismo podrá ser abonado en mesa de control el día del torneo en efectivo o a través de mercado pago.</p>
+                
                 <h6>Protocolos Covid-19</h6>
                 <p>Sera de uso obligatorio el barbijo siempre que no se esté disputando un encuentro, también la desinfeccion de manos constante.</p>
             </div>
