--- a/reglamento.html
+++ b/reglamento.html
@@ -48,8 +48,8 @@
                         <li>Se tomará el ranking TMT publicado al día del domingo 27 de marzo.</li>
                         <li>Solo podran participar jugadores que sean de la categoria 1ra TMT o de categorias inferiores.</li>
                         <li>Los participantes de la categoria 1ra TMT solo podran participar con una pareja de categoria 3ra TMT(inclusive) o inferior.</li>
-                        <li>Los participantes de la categoria 1ra TMT no podrán participar con un jugador de la categoria 2da TMT.</li>
-                        <li>Los jugadores de categorias inferiores a 1ra que deseen participar pueden hacerlo con un jugador de cualquier otra categoria excepto 1ra TMT.(Por ejemplo: dos jugadores de 2da TMT, uno de 2da TMT con uno de 3ra TMT, etc).</li>
+                        <li>Los participantes de la categoria 1ra TMT no podrán participar con un jugador de la categoria 1ra TMT o 2da TMT.</li>
+                        <li>(Por ejemplo: un jugador de 1ra con uno de 3ra, dos jugadores de 2da TMT, uno de 2da TMT con uno de 3ra TMT, etc).</li>
                         <li>El torneo comienza y termina en el día.</li>
                         <li>La fecha limite para inscribirse es el viernes 8 de abril.</li>
                         <li>No se aceptarán inscripciones presenciales, el único medio para inscribirse es a traves del numero 11-7368-8676.</li>
