--- a/zonas.html
+++ b/zonas.html
@@ -82,6 +82,15 @@ $.getJSON(url, function (json) {
 
       let div1 = document.createElement("img");
       div1.className="categoriauno";
+      if(json.records[i-1+j].PUNTAJE1 > 1199){
+        div1.src="images/icono_puesto_1ra.gif";
+      }
+      if(json.records[i-1+j].PUNTAJE1 > 999 & json.records[i-1+j].PUNTAJE1 <1200){
+        div1.src="images/icono_puesto_2da.gif";
+      }
+      if(json.records[i-1+j].PUNTAJE1 > 799 & json.records[i-1+j].PUNTAJE1 <1000){
+        div1.src="images/icono_puesto_3ra.gif";
+      }
       if(json.records[i-1+j].PUNTAJE1 > 599 & json.records[i-1+j].PUNTAJE1 <800){
         div1.src="images/icono_puesto_4ta.gif";
       }
@@ -97,6 +106,15 @@ $.getJSON(url, function (json) {
       divisiones.appendChild(div1);
 
       let div2 = document.createElement("img");
+      if(json.records[i-1+j].PUNTAJE2 > 1199){
+        div2.src="images/icono_puesto_1ra.gif";
+      }
+      if(json.records[i-1+j].PUNTAJE2 > 999 & json.records[i-1+j].PUNTAJE2 <1200){
+        div2.src="images/icono_puesto_2da.gif";
+      }
+      if(json.records[i-1+j].PUNTAJE2 > 799 & json.records[i-1+j].PUNTAJE2 <1000){
+        div2.src="images/icono_puesto_3ra.gif";
+      }
       if(json.records[i-1+j].PUNTAJE2 > 599 & json.records[i-1+j].PUNTAJE2 <800){
         div2.src="images/icono_puesto_4ta.gif";
       }
@@ -160,9 +178,19 @@ $.getJSON(url, function (json) {
     </div>
 
    <!-- Zonas  -->
-   <div align="center">
+   <div>
 
-     <h4> Proximamente Zonas del Torneo </h4>
+    <p id="re"></p>
+
+    <input id="b1" type="button" onclick="read_value()"class="btn" style="height: 8vh; width: 1vh; font-size: 3vh; margin-bottom: 3vh; display: none; border:1px solid white; color:white;" value="Ver Listado" />
+    
+    <div id="showData">
+    </div>
+
+    <div id="loader" align="center">
+      <img src="images/loading.gif" alt="" style="height: 90px; width: 90px;">
+      <p style="color: white;">Cargando..</p>
+    </div>
 
   </div>
 
@@ -212,7 +240,11 @@ $.getJSON(url, function (json) {
       <p class="text">Diseño y desarrollo por Diego Simon</p>
     </section>
 
-   
+    <script>
+      window.onload = function Ejemplo(){
+        $("#b1").click();
+      }
+    </script>
     <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
 
 </body>
