--- a/zonas.html
+++ b/zonas.html
@@ -180,17 +180,9 @@ $.getJSON(url, function (json) {
    <!-- Zonas  -->
    <div>
 
-    <p id="re"></p>
+    <h1 align="center">En 5 volvemos, estamos trabajando</h1>
 
-    <input id="b1" type="button" onclick="read_value()"class="btn" style="height: 8vh; width: 1vh; font-size: 3vh; margin-bottom: 3vh; display: none; border:1px solid white; color:white;" value="Ver Listado" />
     
-    <div id="showData">
-    </div>
-
-    <div id="loader" align="center">
-      <img src="images/loading.gif" alt="" style="height: 90px; width: 90px;">
-      <p style="color: white;">Cargando..</p>
-    </div>
 
   </div>
 
@@ -240,11 +232,7 @@ $.getJSON(url, function (json) {
       <p class="text">Diseño y desarrollo por Diego Simon</p>
     </section>
 
-    <script>
-      window.onload = function Ejemplo(){
-        $("#b1").click();
-      }
-    </script>
+    
     <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
 
 </body>
